--- a/aboutme.html
+++ b/aboutme.html
@@ -29,13 +29,10 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="aboutme.html">About Me</a></li>
+							<li><a href="research.html">Research</a></li>
+							<li><a href="publication.html">Publications</a></li>
+							<li><a href="life.html">Life</a></li>
 						</ul>
 					</nav>
 
@@ -105,8 +102,8 @@
 												<h2>Volunteer</h2>
 												<p>I served as a volunteer with Children of Sea, NTU, in Penghu, Taiwan. 
 													Penghu is a distant island of Taiwan. I helped to hold four summer/winter camps for the kids in 2011-2013. 
-													Also we worked closely with the communities to organize annual events and visited elders whose children were working out of town.
-													This is now a big part of it. I went back to Penghu to serve one year in an elementary school in 2018.
+													Also we worked closely with the communities to organize annual events and visited elder people whose children were working out of town.
+													This experience has become a big part of me. I went back to Penghu to serve one year in an elementary school in 2018.
 												</p>
 											</div>
 										</div>
@@ -122,7 +119,8 @@
 							<li><a href="http://twitter.com/naechyun_chen" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="http://github.com/milkschen" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.linkedin.com/in/ncchen/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li>cnaechy1< at >jhu.edu</li>
+							<li><a href="https://scholar.google.com/citations?hl=en&user=JymhwIwAAAAJ&view_op=list_works&sortby=pubdate" class="icon brands alt fa-google"><span class="label">Google Scholar</span></a></li>
+							<li><span class="icon solid alt fa-envelope"></span> cnaechy1< at >jhu.edu</li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
