--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="aboutme.html">About Me</a></li>
+							<li><a href="research.html">Research</a></li>
+							<li><a href="publication.html">Publications</a></li>
+							<li><a href="life.html">Life</a></li>
 						</ul>
-						<!-- <ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul> -->
 					</nav>
 
 				<!-- Banner -->
@@ -47,7 +44,7 @@
 							</header>
 							<div class="content">
 								<p>PhD student at JHU CS.<br />
-								I develop software for genomics.<br />
+								I develop computational methods for genomics.<br />
 								Now live in Baltimore. From Taiwan. He/Him/His. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 								<!-- <ul class="actions">
 									<li><a href="#one" class="button next scrolly">Know more about me</a></li>
@@ -66,8 +63,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="elements_me.html" class="link">About Me</a></h3>
-										<!-- <p>My education and working experience</p> -->
+										<h3><a href="aboutme.html" class="link">About Me</a></h3>
 									</header>
 								</article>
 								<article>
@@ -75,8 +71,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Research</a></h3>
-										<!-- <p>feugiat amet tempus</p> -->
+										<h3><a href="research.html" class="link">Research</a></h3>
 									</header>
 								</article>
 								<article>
@@ -84,8 +79,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Publications</a></h3>
-										<!-- <p>Lorem etiam nullam</p> -->
+										<h3><a href="publication.html" class="link">Publications</a></h3>
 									</header>
 								</article>
 								<article>
@@ -93,32 +87,13 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Life</a></h3>
-										<!-- <p>Trying to get things balanced</p> -->
+										<h3><a href="life.html" class="link">Life</a></h3>
 									</header>
 								</article>
-								<!-- <article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
-									</header>
-								</article> -->
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<!-- <section id="two">
 								<div class="inner">
 									<header class="major">
 										<h2>Massa libero</h2>
@@ -128,24 +103,25 @@
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
-							</section>
+							</section> -->
 
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="http://twitter.com/naechyun_chen" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="http://github.com/milkschen" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/ncchen/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li>cnaechy1< at >jhu.edu</li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+				<footer id="footer">
+					<div class="inner">
+						<ul class="icons">
+							<li><a href="http://twitter.com/naechyun_chen" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="http://github.com/milkschen" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ncchen/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://scholar.google.com/citations?hl=en&user=JymhwIwAAAAJ&view_op=list_works&sortby=pubdate" class="icon brands alt fa-google"><span class="label">Google Scholar</span></a></li>
+							<li><span class="icon solid alt fa-envelope"></span> cnaechy1< at >jhu.edu</li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
+				</footer>
 
 			</div>
 
