updated information (research); added some figs

--- a/aboutme.html
+++ b/aboutme.html
@@ -58,6 +58,14 @@
 											<i>#sequence_sketch</i> &nbsp;&nbsp;&nbsp;&nbsp; 
 											<i>#pan_genome</i> 
 										</p>
+										<h2 id="content">Skills</h2>
+										<p> 
+											<ul>
+												<li>Languages: Mandarin (traditional), English</li>
+												<li>Progamming languages: Python, R, C++, Bash, Verilog</li>
+												<li>Tools: git, Latex, Snakemake</li>
+											</ul>
+										</p>
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<h2>Education</h2>
