--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 								<h1>This is Nae-Chyun Chen</h1>
 							</header>
 							<div class="content">
-								<p>PhD student at JHU CS.<br />
-								I develop computational methods for genomics.<br />
-								Now live in Baltimore. From Taiwan. He/Him/His. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+								<p><font size="3">PhD student at JHU CS.<br />
+								I develop computational genomics methods.<br />
+								Now live in Baltimore. From Taiwan. He/Him/His. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></p>
 								<!-- <ul class="actions">
 									<li><a href="#one" class="button next scrolly">Know more about me</a></li>
 								</ul> -->
@@ -60,34 +60,38 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/lake_louise.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="aboutme.html" class="link">About Me</a></h3>
+										<h2><a href="aboutme.html" class="link">About Me</a></h2>
+										<p><font size="3">Education | Research | Industry Experience</font></p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/jhu.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="research.html" class="link">Research</a></h3>
+										<h2><a href="research.html" class="link">Research</a></h2>
+										<p><font size="3">I develop fast and accurate computational genomics methods</font></p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/ntu.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="publication.html" class="link">Publications</a></h3>
+										<h2><a href="publication.html" class="link">Publications</a></h2>
+										<p><font size="3">I publish papers in biological journals and IEEE conferences</font></p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/jangjun.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="life.html" class="link">Life</a></h3>
+										<h2><a href="life.html" class="link">Life</a></h2>
+										<p><font size="3">Travel | Sports | Photography</font></p>
 									</header>
 								</article>
 							</section>
