--- a/research.html
+++ b/research.html
@@ -48,34 +48,44 @@
 									<h3>Improving sequence alignment and reducing reference bias</h3>
 									<p>
 										Alignment is the first step for many genomics applications. 
-										Currently, people rely on a linear haploid reference genome such as GRCh37 and GRCh38 for this task. 
-										However, more than half of the "standard" reference genomes is from one individual, resulting in confounding of downstream results. 
+										Currently, people rely on a linear haploid reference genome such as GRCh38 for this task. 
+										However, more than half of the "standard" reference genome is from one individual, resulting in confounding of downstream results. 
 										A solution is replacing the linear reference with a graph data structure that contains genotypes collected from many individuals, aka graph genome. 
 										Our study, FORGe, presents a ranking strategy for the inclusion of population data. 
-										As an extension of FORGe, my first-author project, reference flow, uses a small number of additional references built using population data to improve the alignment results. 
-									</br></br>
-										Publications: Chen <i>et al.</i> (2020, preprint), Pritt <i>et al.</i> (2018)
+										As an extension of FORGe, I develop "reference flow" that uses a small number of additional references built using population data to improve alignment results. 
 									</br>
-										Presentation: RECOMB-Seq (Washington DC, USA, 2019), Genome Informatics (CSHL, USA, 2019)
+									<ul>
+										<li>Publications: Chen <i>et al.</i> (2020, preprint), Pritt <i>et al.</i> (2018)</li>
+										<li>Presentation: RECOMB-Seq (Washington DC, USA, 2019), Genome Informatics (CSHL, USA, 2019)</li>
+										<li>Software: 
+										<a href="https://github.com/langmead-lab/reference_flow">reference flow</a>, 
+										<a href="https://github.com/alshai/liftover">liftover</a>, 
+										<a href="https://github.com/langmead-lab/FORGe">FORGe</a>, 
+										<a href="https://github.com/BenLangmead/bowtie-majref">bowtie-majref</a></li>
+									</ul>
 									</p>
 									<h3>Developing computational methods for biological and medical data</h3>
 									<p>
 										Many research areas have been adopting modern sequencing techonology for faster and more accurate analysis. 
 										I collaborate with researchers at Johns Hopkins University to predict chromatin accessibility using machine learning methods. 
 										Also, I work with collaborators at National Taiwan Univeristy to study immunogenomics such as the human leukocyte antigen (HLA) complex.
-									</br></br>
-										Presentation: JHU Chromatin Workshop (2019)
+									</br>
+									<ul>
+										<li>Presentation: JHU Chromatin Workshop (2019)</li>
+									</ul>
 									</p>
 									<h3>Designing efficient hardware architecture for computational genomics</h3>
 									<p>
 										With the enormous volume of genomics data, how to process it efficiently has become a challenging topic. 
-										One solution is using specialized hardware architecture based on FPGA or ASIC to make computing fast or power efficient. 
-										I designed algorithms to meet hardware requirements and developed architectures for efficient computing. 
+										One solution is using specialized hardware architecture based on FPGA or ASIC to make computing efficient. 
+										I design specialized algorithms to meet hardware requirements (which are usually more limited than that of software) and develop architectures for efficient computing. 
 										My research includes short read and long read alignment, multiple sequence alignment, and assembly.
-									</br></br>
-										Publications: Liao <i>et al.</i> (2018), Chen <i>et al.</i> (2018), Lin <i>et al.</i> (2018), Chang <i>et al.</i> (2016), Liu <i>et al.</i> (2016), Chen <i>et al.</i> (2015)
 									</br>
-										Presentations: APCCAS (Jeju, Korea, 2016), BioCAS (Atlanta, USA, 2015)
+									<ul>
+										<li>Publications: Liao <i>et al.</i> (2018), Chen <i>et al.</i> (2018), Lin <i>et al.</i> (2018), Chang <i>et al.</i> (2016), Liu <i>et al.</i> (2016), Chen <i>et al.</i> (2015)</li>
+									<!-- </br> -->
+										<li>Presentations: APCCAS (Jeju, Korea, 2016), BioCAS (Atlanta, USA, 2015)</li>
+									</ul>
 									</p>
 								</div>
 							</section>
