--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,6 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Header -->
 					<header id="header">
 						<a href="index.html" class="logo"><strong>Nae-Chyun</strong> <span></span></a>
@@ -44,6 +43,7 @@
 								<div class="inner">
 									<header class="major">
 										<h1>Nae-Chyun Chen</h1>
+										<p><a href="files/resume_20200310.pdf">Resume (PDF)</a>, updated: March 10th, 2020</p>
 									</header>
 
 									<!-- Content -->
@@ -99,7 +99,7 @@
 												<ul class="alt">
 													<li> <b>Internship Mentor</b> (2019)</br>
 														Advised Sheila Iyer (high-school intern) to study the reference bias of genomic sequence alignment.
-														The work becomes part of a research paper and wins school science fair.
+														The work became part of a research paper and won school science fair.
 													</li>
 													<li> <b>Teaching Assistant</b> </br>
 														NTU: Data Compression (2015) (grad-level), Computer Architecture (2016, 2017) (upper undergrad)
