--- a/aboutme.html
+++ b/aboutme.html
@@ -62,8 +62,8 @@
 										<p> 
 											<ul>
 												<li>Languages: Mandarin (traditional), English</li>
-												<li>Progamming languages: Python, R, C++, Bash, Verilog</li>
-												<li>Tools: git, Latex, Snakemake</li>
+												<li>Progamming languages: Python, R, C++, C, Verilog</li>
+												<li>Tools: git, Latex, Bash, Snakemake</li>
 											</ul>
 										</p>
 										<div class="row">
