--- a/aboutme.html
+++ b/aboutme.html
@@ -43,7 +43,7 @@
 								<div class="inner">
 									<header class="major">
 										<h1>Nae-Chyun Chen</h1>
-										<p><a href="files/resume_20200310.pdf">Resume (PDF)</a>, updated: March 10th, 2020</p>
+										<p><a href="files/resume_20200508.pdf">Resume (PDF)</a>, updated: May 8th, 2020</p>
 									</header>
 
 									<!-- Content -->
@@ -86,7 +86,7 @@
 											<div class="col-6 col-12-small">
 												<h2>Working</h2>
 												<ul class="alt">
-													<li>I will start my internship at <b>Genomics in Google Health</b> in summer, 2020 </br></li>
+													<li>I will start my internship at <b>Genomics, Google AI,</b> in summer, 2020 </br></li>
 													<li> <b>Technical Intern</b> (summer, 2016) </br>
 														Synopsys, Sunnyvale, California, USA </br>
 														IC Compiler II (ICC2) Team
