--- a/aboutme.html
+++ b/aboutme.html
@@ -56,7 +56,7 @@
 											<i>#computational_genomics</i> &nbsp;&nbsp;&nbsp;&nbsp; 
 											<i>#sequence_alignment</i> &nbsp;&nbsp;&nbsp;&nbsp; 
 											<i>#sequence_sketch</i> &nbsp;&nbsp;&nbsp;&nbsp; 
-											<i>#pan_genome</i> 
+											<i>#pangenome</i> 
 										</p>
 										<h2 id="content">Skills</h2>
 										<p> 
@@ -86,7 +86,10 @@
 											<div class="col-6 col-12-small">
 												<h2>Working</h2>
 												<ul class="alt">
-													<li>I will start my internship at <b>Genomics, Google AI,</b> in summer, 2020 </br></li>
+													<li> <b>Research Intern</b> (summer, 2020) </br>
+														Google, USA </br>
+														Genomics Team, Google AI
+													</li>
 													<li> <b>Technical Intern</b> (summer, 2016) </br>
 														Synopsys, Sunnyvale, California, USA </br>
 														IC Compiler II (ICC2) Team
@@ -99,7 +102,7 @@
 												<ul class="alt">
 													<li> <b>Internship Mentor</b> (2019)</br>
 														Advised Sheila Iyer (high-school intern) to study the reference bias of genomic sequence alignment.
-														The work became part of a research paper and won school science fair.
+														The work became part of a research paper and won regional science fair.
 													</li>
 													<li> <b>Teaching Assistant</b> </br>
 														NTU: Data Compression (2015) (grad-level), Computer Architecture (2016, 2017) (upper undergrad)
