updated intern team

--- a/aboutme.html
+++ b/aboutme.html
@@ -88,7 +88,7 @@
 												<ul class="alt">
 													<li> <b>Research Intern</b> (summer, 2020) </br>
 														Google, USA </br>
-														Genomics Team, Google AI
+														DeepVariant Team (Brain Genomics), Google Health
 													</li>
 													<li> <b>Technical Intern</b> (summer, 2016) </br>
 														Synopsys, Sunnyvale, California, USA </br>
