updated resume; minor text adjustments

--- a/aboutme.html
+++ b/aboutme.html
@@ -43,16 +43,16 @@
 								<div class="inner">
 									<header class="major">
 										<h1>Nae-Chyun Chen</h1>
-										<p><a href="files/resume_20200508.pdf">Resume (PDF)</a>, updated: May 8th, 2020</p>
+										<p><a href="files/resume_20200826.pdf">Resume (PDF)</a>, updated: Aug 26th, 2020</p>
 									</header>
 
 									<!-- Content -->
 										<h2 id="content">Research Interests</h2>
-										<p> I'm in general interested in computational genomics. 
+										<p> I'm interested in computational genomics. 
 											I work on methods to improve sequence alignment and reduce reference bias using population genomic data. 
 											I study alignment-free methods for genomic sequnece data.
-											I develop computational methods to biological and medical questions.
-											I'm also experienced in designing hardware architectures based on FPGA or ASIC to accelerate computing. </br></br>
+											I develop computational methods to answer biological and medical questions.
+											I'm also experienced in designing hardware architectures based on FPGA and ASIC to accelerate computing. </br></br>
 											<i>#computational_genomics</i> &nbsp;&nbsp;&nbsp;&nbsp; 
 											<i>#sequence_alignment</i> &nbsp;&nbsp;&nbsp;&nbsp; 
 											<i>#sequence_sketch</i> &nbsp;&nbsp;&nbsp;&nbsp; 
@@ -87,7 +87,7 @@
 												<h2>Working</h2>
 												<ul class="alt">
 													<li> <b>Research Intern</b> (summer, 2020) </br>
-														Google, USA </br>
+														Google, Remote, USA </br>
 														DeepVariant Team (Brain Genomics), Google Health
 													</li>
 													<li> <b>Technical Intern</b> (summer, 2016) </br>
@@ -111,10 +111,10 @@
 											</div> 
 											<div class="col-6 col-12-small">
 												<h2>Volunteer</h2>
-												<p>I served as a volunteer with Children of Sea, NTU, in Penghu, Taiwan. 
-													Penghu is a distant island of Taiwan. I helped to hold four summer/winter camps for the kids in 2011-2013. 
-													Also we worked closely with the communities to organize annual events and visited elder people whose children were working out of town.
-													This experience has become a big part of me. I went back to Penghu to serve one year in an elementary school in 2018.
+												<p>I served as a volunteer with the Children of Sea club at NTU. 
+													I helped to organize four summer/winter camps for local kids in 2011-2013 at Penghu &mdash; a distant island of Taiwan. 
+													We also worked closely with local communities to held annual events and visited elder people whose children were working out of town.
+													This experience has become a big part of me. I went back to Penghu to serve one year in Wen-Ao Elementary School in 2018.
 												</p>
 											</div>
 										</div>
