--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>This is Nae-Chyun Chen</h1>
+								<h1>陳乃群 Nae-Chyun Chen</h1>
 							</header>
 							<div class="content">
 								<p><font size="3">PhD student at JHU CS.<br />
