--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<div class="content">
 								<p><font size="3">PhD student at JHU CS.<br />
 								I develop computational genomics methods.<br />
-								Now live in Baltimore. From Taiwan. He/Him/His. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></p>
+								Live in Baltimore. From Taiwan. He/Him/His. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></p>
 								<!-- <ul class="actions">
 									<li><a href="#one" class="button next scrolly">Know more about me</a></li>
 								</ul> -->
