--- a/aboutme.html
+++ b/aboutme.html
@@ -43,19 +43,17 @@
 								<div class="inner">
 									<header class="major">
 										<h1>Nae-Chyun Chen</h1>
-										<p><a href="files/resume_20200826.pdf">Resume (PDF)</a>, updated: Aug 26th, 2020</p>
+										<p><a href="files/resume_20201113.pdf">Resume (PDF)</a>, updated: Nov 17th, 2020</p>
 									</header>
 
 									<!-- Content -->
 										<h2 id="content">Research Interests</h2>
 										<p> I'm interested in computational genomics. 
 											I work on methods to improve sequence alignment and reduce reference bias using population genomic data. 
-											I study alignment-free methods for genomic sequnece data.
 											I develop computational methods to answer biological and medical questions.
 											I'm also experienced in designing hardware architectures based on FPGA and ASIC to accelerate computing. </br></br>
 											<i>#computational_genomics</i> &nbsp;&nbsp;&nbsp;&nbsp; 
 											<i>#sequence_alignment</i> &nbsp;&nbsp;&nbsp;&nbsp; 
-											<i>#sequence_sketch</i> &nbsp;&nbsp;&nbsp;&nbsp; 
 											<i>#pangenome</i> 
 										</p>
 										<h2 id="content">Skills</h2>
@@ -86,7 +84,7 @@
 											<div class="col-6 col-12-small">
 												<h2>Working</h2>
 												<ul class="alt">
-													<li> <b>Research Intern</b> (summer, 2020) </br>
+													<li> <b>Research Intern</b> (summer, 2020) & <b>Student Researcher</b> (fall, 2020) </br>
 														Google, Remote, USA </br>
 														DeepVariant Team (Brain Genomics), Google Health
 													</li>
