--- a/life.html
+++ b/life.html
@@ -91,10 +91,10 @@
 												<h3>Sports</h3>
 											</header>
 											<p>
-												Sports is the biggest part of me after work. I play lots of sports.
+												Sports is the biggest part of me outside working. I play lots of sports.
 												I was on my departmental table tennis team from 2010 to 2017 and I led the team as the captain in 2013. 
 												We played tournaments over many cities in Taiwan and won several champs. 
-												I play badminton with my friends at Hopkins frequently, and occasionally play some basketball and softball.
+												I play badminton and squash with my friends at Hopkins frequently, and occasionally play some basketball and softball.
 											</br>
 												I also watch lots of sports. 
 												I've been a fan for Boston Red Sox and Dallas Mavericks for more than a decade. 
